--- a/documents.html
+++ b/documents.html
@@ -80,9 +80,7 @@
                     <img src="/svg/google-docs.png" alt="">
                 </div>
                 <div class="documents__block-name">
-                    <p>
-                        Сведения о рейтингах национального состава за 2018-2019 год
-                    </p> 
+                    <a href = "/svg/google-docs.png"> Сведения о рейтингах национального состава за 2018-2019 год</a>
                 </div>
                 <div class="documents__block-date">
                     Опубликовано 28 Ноября
@@ -93,9 +91,7 @@
                     <img src="/svg/google-docs.png" alt="">
                 </div>
                 <div class="documents__block-name">
-                    <p>
-                        Сведения о рейтингах национального состава за 2018-2019 год
-                    </p> 
+                    <a href = "/svg/google-docs.png"> Сведения о рейтингах национального состава за 2018-2019 год</a>
                 </div>
                 <div class="documents__block-date">
                     Опубликовано 28 Ноября
@@ -106,9 +102,7 @@
                     <img src="/svg/google-docs.png" alt="">
                 </div>
                 <div class="documents__block-name">
-                    <p>
-                        Сведения о рейтингах национального состава за 2018-2019 год
-                    </p> 
+                    <a href = "/svg/google-docs.png"> Сведения о рейтингах национального состава за 2018-2019 год</a>
                 </div>
                 <div class="documents__block-date">
                     Опубликовано 28 Ноября
