--- a/voleyboll/one_page.html
+++ b/voleyboll/one_page.html
@@ -75,7 +75,10 @@
         <section class="one__news">
            <div class="one__block">
                <div class="one__block-inner">
-                   <div class="one__block-date">28 января</div>
+                   <div class="one__block-date">
+                       <p>28 января</p>
+                       <a href = "/news.html">Вернуться к новостям</a>
+                    </div>
                     <div class="one__block-img">
                         <img src="/img/news.png" alt="">
                     </div>
