--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
         <nav class = "mobile_menu">
             <ul class = "mobile_menu__ul">
                 <li class="mobile_menu__li"> <a href = "/">Главная</a> </li>
-                <li class="mobile_menu__li"> <a href = "/all_games.html">Расписание/a></li>
+                <li class="mobile_menu__li"> <a href = "/all_games.html">Расписание</a></li>
                 <li class="mobile_menu__li"> <a href = "/team.html">Команда</a> </li>
                 <li class="mobile_menu__li"> <a href = "/statistics.html">Статистика</a></li>
                 <li class="mobile_menu__li"> <a href = "/documents.html">Документы</a></li>
