--- a/page.html
+++ b/page.html
@@ -30,7 +30,27 @@
                         <a class = "header__link" href = "/page-library.html">Библиотека</a>
                     </li>
                     <li class="header__li-mobile">
-                        <a class = "header__link" href = "/page-archive.html">Архив</a>
+                        <a class = "header__link" href = "/page-archive.html">О библиотеке</a>
+                    </li>
+                    <li class="header__li-mobile  header__li-drop-mobile">
+                        <span class = "header__link"> Читателям</span>
+                            <ul class = "dropdown__menu">
+                                <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                            </ul>
+                    </li>
+                    <li class="header__li-mobile header__li-drop-mobile">
+                        <span class = "header__link"> Ресурсы</span>
+                        <ul class ="dropdown__menu">
+                            <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                            <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                            <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                            <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                            <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                         </ul>
                     </li>
                 </ul>
             </nav>
@@ -51,7 +71,41 @@
                                 <a class = "header__link" href = "/page-library.html">Библиотека</a>
                             </li>
                             <li class="header__li">
-                                <a class = "header__link" href = "/page-archive.html">Архив</a>
+                                <a class = "header__link" href = "/page-archive.html">О библиотеке</a>
+                            </li>
+                            <li class="header__li header__li-drop">
+                                <span class = "header__link"> Читателям</span>
+                                    <ul class = "dropdown__menu">
+                                        <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                        <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                        <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                        <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                        <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                    </ul>
+                            </li>
+                            <li class="header__li header__li-drop"">
+                                <span class = "header__link"> Ресурсы</span>
+                                <ul class ="dropdown__menu">
+                                    <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                    <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                    <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                    <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                    <li class="dropdown__li"> <a href="/s" class="header__link">Идентификаторы и профили исследователей</a></li>
+                                 </ul>
+                            </li>
+                            <li class="header__li header__li-drop more">
+                                <span></span>
+                                <ul class ="dropdown__menu more__menu">
+                                    <li class="dropdown__li">
+                                        <a class = "header__link" href = "/">Главная</a>
+                                    </li>
+                                    <li class="dropdown__li">
+                                        <a class = "header__link" href = "/page-library.html">Библиотека</a>
+                                    </li>
+                                    <li class="dropdown__li">
+                                        <a class = "header__link" href = "/page-archive.html">О библиотеке</a>
+                                    </li>
+                                 </ul>
                             </li>
                         </ul>
                     </nav>
