--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class = "header__link" href = "/page-library.html">Библиотека</a>
                     </li>
                     <li class="header__li-mobile">
-                        <a class = "header__link" href = "/page-archive.html">Архив</a>
+                        <a class = "header__link" href = "/page-archive.html">О библиотеке</a>
                     </li>
                     <li class="header__li-mobile  header__li-drop-mobile">
                         <span class = "header__link"> Читателям</span>
